fixed chat input on mobile

--- a/public/js/views/chat/chatInputView.less
+++ b/public/js/views/chat/chatInputView.less
@@ -49,20 +49,6 @@
       height: 24px;
     }
   }
-
-  @media @mobile {
-    background-color: white;
-    padding-top: 5px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    border-top: 1px solid @trpBgColor;
-
-    .avatar-s {
-      width: 24px;
-      height:24px;
-    }
-  }
 }
 
 .chat-input__area {
@@ -161,12 +147,6 @@
     margin-left: 40px;
     padding: 0;
   }
-
-  @media @mobile {
-    background-color: white;
-    margin-left: 24px;
-    padding: 0 10px;
-  }
 }
 
 .chat-input__text-area {
@@ -191,11 +171,5 @@
 
   &:focus {
     outline: none;
-  }
-
-  @media @mobile {
-    background-color: white;
-    padding: 0;
-    margin: 0;
   }
 }
